@@ -1,3 +1,8 @@
+2004-10-01 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Dialog_About.cc,
+	  src/TreeView_Detail.cc: minor changes to a few strings
+
 2004-10-01 Hendrik Brandt  <hebra@cvs.gnome.org>
 
 	* configure.in: added "de" (German) to ALL_LINGUAS
